[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serenity = "0.10.10"
serde_json = "1.0.79"
serde = "1.0.136"
tiny-skia = "0.6.3"
lazy_static = "1.4.0"
rusttype = "0.9.2"
image = "0.24.1"
dashmap = "5.2.0"
rand = "0.8.5"
num-integer = "0.1.44"
chrono = "0.4.19"